# neuralk-technical-assessment

./: .env.example  .flake8  .gitignore  CI.md  README.md  TA.md  Taskfile.yml  client.py  config.py  docker-compose.yml  example_1.py  example_2.py  logger.py  make_data.py  ml.py  proxy.py  pyproject.toml  requirements.txt  server.py  setup.py  worker.py
.github/workflows/: ci.yml
deploy/docker/client/: Dockerfile
deploy/docker/server/: Dockerfile
deploy/docker/worker/: Dockerfile
deploy/envoy/: envoy.yaml
deploy/grafana/dashboards/: neuralk-otel-overview.json
deploy/helm/neuralk/: Chart.yaml  README.md  values-dev.yaml  values.yaml
deploy/helm/neuralk/templates/: NOTES.txt  _helpers.tpl  client.yaml  configmap.yaml  ingress.yaml  init-minio-job.yaml  minio.yaml  redis.yaml  secrets.yaml  server.yaml  worker.yaml
deploy/kube/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  03-persistent-volumes.yaml  04-redis.yaml  05-minio.yaml  06-init-minio.yaml  07-worker.yaml  08-server.yaml  09-client.yaml  09-ingress.yaml  10-hpa.yaml  README.md
deploy/observability/grafana/dashboards/: neuralk-redis-monitoring.json
deploy/observability/grafana/provisioning/datasources/: datasources.yml
deploy/observability/otel/: otel-collector-config.yaml
deploy/otel/: otel-collector-config.yaml
deploy/prometheus/: prometheus.yml
docs/: arch.md
src/: __init__.py
src/api/: server.py
src/core/: ml.py  worker.py
src/utils/: __init__.py  config.py  logger.py
tests/integration/: conftest.py  test_001_client_example1.py
